Revision history for App::TimeTracker

0.08-tobe
    - added --from and --to to worked
    - added --svn to stop
    - added some docs

0.08-tobe
    - added missing dependency on DateTime::Format::Strptime


0.07    2006-01-23
    - added docs
    - fixed bad default filepath


0.06    2006-01-22
    - renamed to App::TimeTracker
    - first release to CPAN


0.05    2008-01-21
    - switched to SQLite for storage
    - added DBIx::Class
    - rewrote a lot of stuff to work with DBIx::Class


0.04    2008-01-18
    - added docs
    - added command 'worked'
    - added command 'current'
    - now using App::Cmd


0.03    2008-01-07
    - override start/stop time from commandline


0.02    2008-01-04
    - ask before adding a new project (to catch typos etc)
    - added beautify_seconds and some nicer output to stop/start


0.01    2008-01-03
    - basic functionality working (start/stop)


0.00    2008-01-02
    - first draft
